<resources>
    <string name="app_name">EcomApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">search_hint</string>
    <string name="your_products">Your PRODUCTS</string>
    <string name="search">search</string>
    <string name="enter_y">Enter Your Card Information HERE :</string>
    <string name="cvv">CVV/CVC</string>
    <string name="expiry_date">Expiry Date : dd/MM/yyyy</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="add_card">Add Card</string>
    <string name="home">Home</string>
    <string name="account">MyAccount</string>
    <string name="sign">Sign Up</string>
    <string name="sell_your_products">Sell Your Products</string>
    <string name="log_out">Log Out</string>
    <string name="remise_by">Remise by %</string>
    <string name="filter">Filter</string>
    <string name="log">Log In</string>
    <string name="forgetpass">Forget Password !</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add_to_panier">Add to Panier !!!</string>
    <string name="p">Price</string>
    <string name="remove">remove</string>
    <string name="remise">Remise</string>
    <string name="name">Name</string>
    <string name="buy_now">Buy Now !</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="url">https://image.url</string>
    <string name="tout_effacer">Tout Effacer</string>
    <string name="enregistrer">ENREGISTRER</string>
    <string name="give_your_rate">Give Your Rate about this Product !</string>
    <string name="add_new_product">Add New Product</string>
    <string name="view_all_products">View All Products</string>
    <string name="view_orders">View Orders</string>
    <string name="save_product">Save Product</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="prix_total">Prix Total :</string>
    <string name="quantite">Quantite:</string>
</resources>