<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gold"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/rounded_corner">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="160dp"
                android:layout_height="170dp"
                android:src="@android:drawable/btn_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:background="@drawable/borderradius"
                android:clipToOutline="true"/>

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pricePanier"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="30dp"
                android:text="@string/p"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

            <TextView
                android:id="@+id/remise2"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="30dp"
                android:text="@string/remise"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toBottomOf="@+id/pricePanier" />

            <Button
                android:id="@+id/delete2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:backgroundTint="@color/gold"
                android:text="@string/remove"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.856"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image2" />

            <Button
                android:id="@+id/buy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/gold"
                android:text="@string/buy_now"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image2"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remise2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Quantite: "
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <ImageButton
                    android:id="@+id/moins2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_corner"
                    app:srcCompat="@drawable/ic_remove_circle_24" />

                <TextView
                    android:id="@+id/quantity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/plus2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_corner"
                    app:srcCompat="@drawable/ic_add_circle_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toBottomOf="@+id/name2">

                <RatingBar
                    android:id="@+id/review2"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    app:layout_constraintStart_toEndOf="@+id/image2"
                    app:layout_constraintTop_toBottomOf="@+id/name2" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>