<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            >

            <Button
                android:id="@+id/add1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/gold"
                android:text="@string/add_to_panier"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image1"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/p"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <ImageView
                android:id="@+id/image1"
                android:src="@android:drawable/btn_star"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:background="@drawable/borderradius"
                android:clipToOutline="true"/> <!-- Ensure the image respects the drawable's shape -->

            <TextView
                android:id="@+id/name1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/remise1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/remise_by"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/price1" />

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/name1">

                <RatingBar
                    android:id="@+id/review1"
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="@color/wh"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    tools:layout_editor_absoluteX="198dp"
                    tools:layout_editor_absoluteY="64dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>